Use text-align center to solve iPhone SE (1st gen) issue without using display flex

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -19,7 +19,7 @@
         margin: 0 auto;
         vertical-align: text-top;
         padding-left: 0;
-        display: flex;
+        text-align: center;
         .menu-item {
             display: inline-block;
             padding: 0.25em;
